<resources>
    <string name="app_name">人人记</string>
    <string name="app_slogan">人人都需要信息发布工具</string>

    <!--title-->
    <string name="title_activity_publish">发布人人记</string>
    <string name="title_activity_share">返回编辑</string>
    <string name="title_activity_personal_center">个人中心</string>
    <string name="title_activity_feed_back">意见反馈</string>
    <string name="title_activity_template">发布模版</string>
    <string name="title_activity_tip_off">举报</string>
    <string name="title_activity_reset_password">重置密码</string>
    <string name="title_activity_edit_info">编辑个人信息</string>

    <!--login text-->
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_login_with_wechat">微信快捷登录</string>
    <string name="text_get_message_code">获取验证码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_other_way_to_login">其他登录方式</string>
    <string name="text_enter_without_login">随便看看</string>

    <!--toast-->
    <string name="toast_exit_double_click">再按一次退出程序</string>
    <string name="toast_min_vote_items">至少有两个投票选项</string>

    <!--placeholder-->
    <string name="placeholder_author_publish_count">已发布内容（%1$d）</string>
    <string name="placeholder_article_read_count">阅读 %1$s</string>
    <string name="placeholder_search_item_info">阅读 %1$s - 评论 %2$s - 喜欢 %3$s</string>
    <string name="placeholder_search_item_author">%1$s %2$s</string>
    <string name="placeholder_publish_author_type">%1$s 发布%2$s</string>
    <string name="placeholder_publish_greeting_name">%1$s，%2$s好</string>
    <string name="placeholder_publish_greeting_ask">今天想要发布什么？</string>
    <string name="placeholder_share_title">《%1$s》</string>
    <string name="placeholder_content_private">私密 / %1$s </string>

    <string name="placeholder_new_reply">收到%1$d个新的%2$s</string>
    <string name="placeholder_no_new_reply">没有新的%1$s</string>
    <string name="placeholder_total_reply">已收到%1$d个%2$s</string>

    <!--hint-->
    <string name="hint_search_text_box">搜索 人人记 里的信息</string>
    <string name="hint_login_phone">手机号码</string>
    <string name="hint_login_message_code">短信验证码</string>
    <string name="hint_login_password">密码</string>
    <string name="hint_publish_title">输入标题</string>
    <string name="hint_publish_content">开始愉快编写正文吧</string>
    <string name="hint_publish_title_dialog">链接名称</string>
    <string name="hint_publish_link_dialog">http://</string>
    <string name="hint_input">请输入...</string>
    <string name="hint_search">搜索...</string>
    <string name="hint_search_cancel">取消</string>
    <string name="hint_main_enter_name">请输入昵称</string>
    <string name="hint_feedback_detail">遇到问题可以在这里反馈给我们，也可以联系客服</string>
    <string name="hint_feedback_contact">请留下你的手机号：QQ/手机号</string>

    <string name="hint_completing_time">活动时间</string>
    <string name="hint_completing_place">举办地点</string>
    <string name="hint_completing_vote">投票项</string>
    <string name="hint_completing_job">招聘职位</string>
    <string name="hint_completing_salary">薪水待遇</string>
    <string name="hint_completing_work_place">工作地址</string>
    <string name="hint_completing_reserve_price">预订价格</string>
    <string name="hint_completing_valid_time">有效时间</string>
    <string name="hint_completing_sale_stuff">售卖物品</string>
    <string name="hint_completing_sale_price">售卖价格</string>
    <string name="hint_completing_sale_way">交易方式</string>
    <string name="hint_completing_vote_one">投票项一</string>
    <string name="hint_completing_vote_count">投票项%1$d</string>
    <string name="hint_completing_vote_add">➕新增投票项</string>

    <!--button-->
    <string name="btn_publish_finish">发布</string>
    <string name="btn_publish_pic">图片</string>
    <string name="btn_publish_type">排版</string>
    <string name="btn_publish_template">模版</string>
    <string name="btn_publish_voice">语音输入</string>
    <string name="btn_author_follow">关注</string>
    <string name="btn_author_message">私信</string>
    <string name="btn_message_export">一键导出</string>

    <string name="btn_share_homepage">首页</string>
    <string name="btn_swipe_share">分享</string>
    <string name="btn_swipe_edit">编辑</string>
    <string name="btn_swipe_delete">删除</string>

    <string name="btn_dialog_big_ok">确 定</string>
    <string name="btn_dialog_ok">确定</string>
    <string name="btn_dialog_cancel">取消</string>

    <string name="btn_feedback_submit">提交反馈</string>
    <string name="btn_dialog_submit">提交</string>
    <string name="btn_dialog_answer">提交回答</string>

    <!--dialog-->
    <string name="dialog_tips_title">提示</string>
    <string name="dialog_publish_title">插入链接</string>
    <string name="dialog_publish_exit_msg">是否保存草稿</string>
    <string name="dialog_del_publish_content">确定要删除吗</string>
    <string name="dialog_logout">你确定要退出吗</string>
    <string name="dialog_pos">是</string>
    <string name="dialog_neg">否</string>
    <string name="popup_main_complete_info">完善个人信息</string>
    <string name="popup_main_click">点击上传头像</string>

    <!--checkbox-->
    <string name="completing_add_item">新增投票项</string>
    <string name="completing_switch">是否需要报名</string>
    <string name="completing_name_cb">姓名</string>
    <string name="completing_phone_cb">手机</string>
    <string name="completing_wechat_cb">微信</string>
    <string name="completing_email_cb">邮箱</string>
    <string name="completing_resume_cb">上传简历</string>
    <string name="completing_vote_single">单选</string>
    <string name="completing_vote_multiple">多选</string>

    <!--publish content type-->
    <string-array name="publish_content">
        <item name="article">文章</item>
        <item name="album">相册</item>
        <item name="activity">活动</item>
        <item name="vote">投票</item>
        <item name="recruit">招聘</item>
        <item name="qa">问答</item>
        <item name="reserve">预订</item>
        <item name="sale">二手</item>
    </string-array>
    <string name="publish_content_article">文章</string>
    <string name="publish_content_album">相册</string>
    <string name="publish_content_activity">活动</string>
    <string name="publish_content_vote">投票</string>
    <string name="publish_content_recruit">招聘</string>
    <string name="publish_content_qa">问答</string>
    <string name="publish_content_reserve">预订</string>
    <string name="publish_content_sale">二手</string>

    <!--share type-->
    <string name="social_share_title">分享到社交网络</string>
    <string name="social_share_tip">此信息访问权限为开放浏览</string>
    <string name="social_share_wei_friend">微信好友</string>
    <string name="social_share_wei">微信朋友圈</string>
    <string name="social_share_qq_friend">QQ好友</string>
    <string name="social_share_qzone">QQ空间</string>
    <string name="social_share_weibo">新浪微博</string>
    <string name="social_share_picture">生成图片分享</string>
    <string name="social_share_copy_link">复制链接</string>
    <string name="social_share_more">更多</string>

    <string name="author_page_not_signature">这个人很懒什么也没写~</string>

    <!--interactive type-->
    <string name="interactive_comment">我要留言</string>
    <string name="interactive_enroll">我要报名</string>
    <string name="interactive_vote">我要投票</string>
    <string name="interactive_resume">投递简历</string>
    <string name="interactive_answer">我要回答</string>
    <string name="interactive_reserve">我要预订</string>
    <string name="interactive_buy">我要购买</string>

    <string name="interactive_want_article">发布文章</string>
    <string name="interactive_want_album">发布相册</string>
    <string name="interactive_want_activity">发布活动</string>
    <string name="interactive_want_vote">发布投票</string>
    <string name="interactive_want_recruit">发布招聘</string>
    <string name="interactive_want_answer">我要提问</string>
    <string name="interactive_want_reserve">发布预订</string>
    <string name="interactive_want_sale">发布二手</string>

    <string name="interactive_view_comment">查看留言</string>
    <string name="interactive_view_enroll">查看报名</string>
    <string name="interactive_view_vote">查看投票</string>
    <string name="interactive_view_resume">查看简历</string>
    <string name="interactive_view_answer">查看回答</string>
    <string name="interactive_view_reserve">查看预订</string>
    <string name="interactive_view_order">查看订单</string>
    <string name="interactive_view_reply">回复私信</string>

    <!--completing text-->
    <string name="completing_activity_title">完善本次 活动 信息</string>
    <string name="completing_vote_title">完善本次 投票 信息</string>
    <string name="completing_recruit_title">完善本次 招聘 信息</string>
    <string name="completing_reserve_title">完善本次 预订 信息</string>
    <string name="completing_sale_title">完善本次 二手物品 信息</string>
    <string name="share_success">信息发布成功！</string>

    <!--personal center item-->
    <string name="personal_center_photo_watermark">照片水印</string>
    <string name="personal_center_photo_watermark_sub">（照片印上您的昵称）</string>
    <string name="personal_center_notification">消息通知</string>
    <string name="personal_center_notification_sub">（接收应聘报名类的通知）</string>
    <string name="personal_center_feedback">意见反馈</string>
    <string name="personal_center_about">关于我们</string>
    <string name="personal_center_sign_out">退出登录</string>

    <!--editor-->
    <string name="font_size">Size</string>
    <string name="font_color">Text Color</string>
    <string name="font_spacing">Exact Spacing</string>
    <string name="font_none">none</string>
    <string name="font_highlight_color">Highlight</string>
    <string name="font_default_text">AaBbCcDd</string>
    <string name="font_style_normal">Normal</string>
    <string name="font_style_heading_1">Heading 1</string>
    <string name="font_style_heading_2">Heading 2</string>
    <string name="font_style_heading_3">Heading 3</string>
    <string name="font_insert">Insert</string>
    <string name="heading_4">Heading 4</string>
    <string name="heading_5">Heading 5</string>
    <string name="heading_6">Heading 6</string>

    <!--text-->
    <string name="popup_content_share">分享</string>
    <string name="popup_content_edit">编辑</string>
    <string name="popup_content_image">生成分享图片</string>
    <string name="popup_content_link">复制链接</string>
    <string name="popup_content_tip_off">举报</string>
</resources>
