<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_without_btn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/border_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/completing_activity_title"
        android:textColor="@color/text_black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/completing_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/hint_completing_time"
                android:padding="12dp"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:hint="@string/hint_completing_place"
                android:padding="12dp"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/completing_switch"
                    android:textColor="@color/textPrimaryDark"
                    android:textSize="16sp" />

                <com.donutcn.widgetlib.widget.SwitchView
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:hasShadow="false"
                    app:isOpened="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.donutcn.widgetlib.widget.CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    app:text="@string/completing_name_cb"
                    app:textColor="@color/textPrimaryDark" />

                <com.donutcn.widgetlib.widget.CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    app:text="@string/completing_phone_cb"
                    app:textColor="@color/textPrimaryDark" />

                <com.donutcn.widgetlib.widget.CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/completing_wechat_cb"
                    app:textColor="@color/textPrimaryDark" />

                <com.donutcn.widgetlib.widget.CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:text="@string/completing_email_cb"
                    app:textColor="@color/textPrimaryDark" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_gray" />
        </LinearLayout>

        <Button
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:layout_below="@+id/completing_info_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@drawable/selector_radius_red_btn"
            android:onClick="onFinish"
            android:text="@string/btn_dialog_big_ok"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>
